# curly

./: .gitignore  BENCHMARK.md  Makefile.am  README.md  benchmark.md  configure.ac  nginx.conf  run_tests.sh
doc/: rfc2616.html  rfc3986.html
src/: .gitignore  Makefile  Makefile.am  config.c  config.h  constants.h  dispatcher.c  dispatcher.h  handler.c  handler.h  hashtable.c  hashtable.h  http.c  http.h  linebuffer.c  linebuffer.h  main.c  parser.c  parser.h  request.c  request.h  response.c  response.h  settings.c  settings.h  url.c  url.h
test_root/: lipsum100k.txt  lipsum10k.txt
tests/: .gitignore  Makefile.am  check_curly.c  hashtable_test.c  linebuffer_test.c  parser_test.c  url_test.c
